clusters/hq/custom/whoami-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
spec:
  selector:
    app: whoami
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: whoami
  namespace: default
spec:
  hosts:
  - gdllc.dev
  gateways:
  - istio-system/main-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: whoami
        port:
          number: 80
